support for in-browser jasmine test

--- a/Kern_test.html
+++ b/Kern_test.html
@@ -1,6 +1,14 @@
 <html>
 <head>
+  <link rel="stylesheet" href="jasmine/lib/jasmine-2.3.4/jasmine.css">
+
+  <script src="jasmine/lib/jasmine-2.3.4/jasmine.js"></script>
+  <script src="jasmine/lib/jasmine-2.3.4/jasmine-html.js"></script>
+  <script src="jasmine/lib/jasmine-2.3.4/boot.js"></script>
+
 	<script type="text/javascript" src="./Kern.js"></script>
+  <!-- include spec files here... -->
+  	<script src="spec/Kern_spec.js"></script>
 </head>
 <body>
 </body>
