new directory structure

--- a/test/Kern_test.html
+++ b/test/Kern_test.html
@@ -6,7 +6,7 @@
   <script src="jasmine/lib/jasmine-2.3.4/jasmine-html.js"></script>
   <script src="jasmine/lib/jasmine-2.3.4/boot.js"></script>
 
-	<script type="text/javascript" src="./Kern.js"></script>
+	<script type="text/javascript" src="../src/core/Kern.js"></script>
   <!-- include spec files here... -->
   	<script src="spec/Kern_spec.js"></script>
 </head>
