remove render_link

--- a/test/html/dataset1.html
+++ b/test/html/dataset1.html
@@ -13,7 +13,8 @@
             WL.repository.importJSON(dataset, 'default');
             var stageData = WL.repository.get("1", 'default');
             var stageView = WL.pluginManager.createView(stageData);
-
+            stageView.render();
+             
             document.body.appendChild(stageView.el);
         })();
     </script>
