frame view: transformData: fix: scale was inverted (1/x)
--HG--
branch : layer transitions

--- a/test/html/dataset2.html
+++ b/test/html/dataset2.html
@@ -21,6 +21,8 @@
     <style>
     .object-frame {
       position:absolute;
+      transform-origin: left top;
+      -webkit-transform-origin: left top;
     }
     .object-layer {
       position:absolute;
