Layer transitions: "left" transition works now
--HG--
branch : layer transitions

--- a/test/html/dataset2.html
+++ b/test/html/dataset2.html
@@ -31,12 +31,16 @@
       width:0px;
       height:0px;
     }
+    .object-stage {
+      overflow: hidden;
+    }
     [data-wl-id='s1'] {
       position: absolute;
       top: 0px;
       left: 0px;
       right: 0px;
       bottom: 0px;
+      //overflow: visible;
     }
     </style>
 </body>
