build script (build should create ./dist/layerjs-xxx.js where xxx is the package.json version. Also add a link from ./dist/layerjs.js and use this in all html tests and examples) Build script now creates layerjs-[version].js file and a layerjs.js file. This file will be used in the examples and html tests
--HG--
branch : gestures-with-layer-transitions

--- a/examples/simpleexample.html
+++ b/examples/simpleexample.html
@@ -33,7 +33,7 @@
     </div>
   </div>
   <button id="next"> next </button>
-  <script src="../dist/main.js"></script>
+  <script src="../dist/layerjs.js"></script>
   <script>
     WL.init();
     var frames = ['main', 'second'];
