--- a/test/html/dataset1.html
+++ b/test/html/dataset1.html
@@ -6,7 +6,7 @@
 
 <body>
     <script type="text/javascript" src="../datasets/dataset1.js"></script>
-    <script type="text/javascript" src="../../dist/main.js"></script>
+    <script type="text/javascript" src="../../dist/layerjs.js"></script>
     <script type="text/javascript">
         (function(){
             WL.imagePath = "../img/img_dataset1/";
