outerEl/innerEl (refactor: rename cobjview.el and .elWrapper to .innerEl and .outerEl;) changed el to innerEl and elWrapper to outerEl. Also updated the test (html and jasmine).
--HG--
branch : gestures-with-layer-transitions

--- a/test/html/dataset1.html
+++ b/test/html/dataset1.html
@@ -15,7 +15,7 @@
             var stageView = WL.pluginManager.createView(stageData);
             stageView.render();
 
-            document.body.appendChild(stageView.el);
+            document.body.appendChild(stageView.outerEl);
         })();
     </script>
     <style>
