default css (layerJS css files) Added a layerjs.css file with will set some properties to it's default value for specific types.
--HG--
branch : gestures-with-layer-transitions

--- a/examples/simpleexample.html
+++ b/examples/simpleexample.html
@@ -2,18 +2,8 @@
 
 <head>
   <title>Simple Example</title>
+  <link rel="stylesheet" type="text/css" href="../src/css/layerjs.css">
   <style>
-    [data-wl-type='frame'] {
-      position: absolute;
-      top: 0px;
-      left: 0px;
-      /* border: 1px solid green; */
-    }
-    [data-wl-type='stage'] {
-      /* border: 1px solid red; */
-      position: relative; /* important!!! now childs will be positioned absolute relative to the stage */
-      overflow: hidden;
-    }
     #root {
       height: 90%;
     }
