--- a/test/html/dataset1.html
+++ b/test/html/dataset1.html
@@ -2,6 +2,7 @@
 
 <head>
     <style id='wl-obj-css'></style>
+    <link rel="stylesheet" type="text/css" href="../../src/css/layerjs.css">
 </head>
 
 <body>
@@ -18,18 +19,6 @@
             document.body.appendChild(stageView.outerEl);
         })();
     </script>
-    <style>
-    .object-frame {
-      position:absolute;
-    }
-    .object-layer {
-      position:absolute;
-      top:0px;
-      left:0px;
-      width:0px;
-      height:0px;
-    }
-    </style>
 </body>
 
 
