--- a/test/html/dataset3.html
+++ b/test/html/dataset3.html
@@ -1,39 +1,25 @@
 <html>
 
 <head>
-    <style id='wl-obj-css'></style>
+  <style id='wl-obj-css'></style>
+  <link rel="stylesheet" type="text/css" href="../../src/css/layerjs.css">
 </head>
 
 <body>
-    <script type="text/javascript" src="../datasets/dataset3.js"></script>
-    <script type="text/javascript" src="../../dist/layerjs.js"></script>
-    <script type="text/javascript">
-        (function(){
-            WL.imagePath = "../img/img_dataset1/";
-            WL.repository.importJSON(dataset, 'default');
-            var stageData = WL.repository.get("s1", 'default');
-            var stageView = WL.pluginManager.createView(stageData);
-            //stageView.render();
-            document.body.appendChild(stageView.outerEl);
-            WL.gestureManager.register();
-        })();
-    </script>
-    <style>
-    .object-frame {
-      position:absolute;
-      transform-origin: left top;
-      -webkit-transform-origin: left top;
-    }
-    .object-layer {
-      position:absolute;
-      top:0px;
-      left:0px;
-      width:0px;
-      height:0px;
-    }
-    .object-stage {
-      overflow: hidden;
-    }
+  <script type="text/javascript" src="../datasets/dataset3.js"></script>
+  <script type="text/javascript" src="../../dist/layerjs.js"></script>
+  <script type="text/javascript">
+    (function() {
+      WL.imagePath = "../img/img_dataset1/";
+      WL.repository.importJSON(dataset, 'default');
+      var stageData = WL.repository.get("s1", 'default');
+      var stageView = WL.pluginManager.createView(stageData);
+      //stageView.render();
+      document.body.appendChild(stageView.outerEl);
+      WL.gestureManager.register();
+    })();
+  </script>
+  <style>
     [data-wl-id='s1'] {
       position: absolute;
       top: 0px;
@@ -42,7 +28,7 @@
       bottom: 0px;
       //overflow: visible;
     }
-    </style>
+  </style>
 </body>
 
 
