--- a/test/html/scrolling.html
+++ b/test/html/scrolling.html
@@ -32,8 +32,9 @@
   <script src="../../dist/layerjs.js"></script>
   <script>
     WL.init();
-    document.querySelector('[data-wl-name="main"]')._wlView.data.set('neighbors',{l:'second',r:'second'});
-    document.querySelector('[data-wl-name="second"]')._wlView.data.set('neighbors',{l:'main',r:'main'});
+    WL.select('[data-wl-name="main"]').data.set('neighbors',{l:'second',r:'second',t:'second',b:'second'});
+    WL.select('[data-wl-name="second"]').data.set('neighbors',{l:'main',r:'main',t:'main',b:'main'});
+    // document.querySelector('[data-wl-name="second"]')._wlView.data.set('neighbors',{l:'main',r:'main'});
     var frames = ['main', 'second'];
     var findex = 0;
     document.getElementById('next').addEventListener('click', function() {
