showcase example: set noscrolling and center on image frames. Note this uses tfd.shiftX/Y values which still have a bug.

--- a/examples/showcase/index.html
+++ b/examples/showcase/index.html
@@ -81,22 +81,22 @@
             <td>
               <div id="stage_images" data-wl-type="stage">
                 <div id="layer_image" data-wl-type="layer" data-wl-native-scroll="false" data-wl-default-frame="image1">
-                  <div data-wl-type="frame" data-wl-name="image1" data-wl-fit-to="cover" data-wl-neighbors.r="image2">
+                  <div data-wl-type="frame" data-wl-name="image1" data-wl-fit-to="cover" data-wl-no-scrolling="true" data-wl-start-position="center" data-wl-neighbors.r="image2">
                     <image data-wl-type="image" src="img/1.jpeg" />
                   </div>
-                  <div data-wl-type="frame" data-wl-name="image2" data-wl-fit-to="cover" data-wl-neighbors.l="image1" data-wl-neighbors.r="image3">
+                  <div data-wl-type="frame" data-wl-name="image2" data-wl-fit-to="cover" data-wl-no-scrolling="true" data-wl-start-position="center" data-wl-neighbors.l="image1" data-wl-neighbors.r="image3">
                     <image data-wl-type="image" src="img/2.jpeg" />
                   </div>
-                  <div data-wl-type="frame" data-wl-name="image3" data-wl-fit-to="cover" data-wl-neighbors.l="image2" data-wl-neighbors.r="image4">
+                  <div data-wl-type="frame" data-wl-name="image3" data-wl-fit-to="cover" data-wl-no-scrolling="true" data-wl-start-position="center" data-wl-neighbors.l="image2" data-wl-neighbors.r="image4">
                     <image data-wl-type="image" src="img/3.jpeg" />
                   </div>
-                  <div data-wl-type="frame" data-wl-name="image4" data-wl-fit-to="cover" data-wl-neighbors.l="image3" data-wl-neighbors.r="image5">
+                  <div data-wl-type="frame" data-wl-name="image4" data-wl-fit-to="cover" data-wl-no-scrolling="true" data-wl-start-position="center" data-wl-neighbors.l="image3" data-wl-neighbors.r="image5">
                     <image data-wl-type="image" src="img/4.jpeg" />
                   </div>
-                  <div data-wl-type="frame" data-wl-name="image5" data-wl-fit-to="cover" data-wl-neighbors.l="image4"  data-wl-neighbors.r="image6">
+                  <div data-wl-type="frame" data-wl-name="image5" data-wl-fit-to="cover" data-wl-no-scrolling="true" data-wl-start-position="center" data-wl-neighbors.l="image4"  data-wl-neighbors.r="image6">
                     <image data-wl-type="image" src="img/5.jpeg" />
                   </div>
-                  <div data-wl-type="frame" data-wl-name="image6" data-wl-fit-to="cover" data-wl-neighbors.l="image5">
+                  <div data-wl-type="frame" data-wl-name="image6" data-wl-fit-to="cover" data-wl-no-scrolling="true" data-wl-start-position="center" data-wl-neighbors.l="image5">
                     <image data-wl-type="image" src="img/6.jpeg" />
                   </div>
                 </div>
